# FFT_reference

./: CMakeLists.txt  Output_Coeff.txt  README.md  ffttest.cu  makestep.sh
include/fft/: cuda_helper.h  ffthelper.h  utils.h
src/: cuda_helper.cu  ffthelper.cu
test/: Polynomial_Coeff.txt  ffttest.cu
